--- a/CodeWatch/frontend/style.css
+++ b/CodeWatch/frontend/style.css
@@ -14,15 +14,55 @@ main {
     overflow-x: auto;
     overflow-y: hidden;
 }
-.acbg{
+
+.acbg {
     background-color: #896a9a;
     color: #e7e9ee;
 }
-.acbg:hover{
+
+.acbg:hover,
+.acbg:visited {
     color: #e7e9ee;
 }
-#sidenav{
+
+#sidenav {
     position: fixed;
     height: 100vh;
     background-color: #1e1721;
+}
+
+.gscontainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4";
+}
+
+.c1 {
+    grid-area: c1;
+}
+
+.c2 {
+    grid-area: c2;
+}
+
+.c3 {
+    grid-area: c3;
+}
+
+.c4 {
+    grid-area: c4;
 }
