--- a/CodeWatch/frontend/style.css
+++ b/CodeWatch/frontend/style.css
@@ -30,13 +30,20 @@ main {
     height: 100vh;
     background-color: #1e1721;
 }
+.gscont{
+    position: absolute;
+    width: calc(100vw - 210px - 1.5vw);
+    height: calc(100vh - 1.5vw);
+    top: 0.75vw;
+    right: 0.75vw;
+}
 
 .gscontainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
-    gap: 0px 0px;
+    gap: 0.75vw 0.75vw;
     grid-auto-flow: row;
     grid-template-areas:
         "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
@@ -52,17 +59,38 @@ main {
 }
 
 .c1 {
+    padding: 0.7vw;
+    border-radius: 0.75vw;
+    position: relative;
+    color:#e7e9ee;
+    height: calc((100vh - 2.25vw)/2);
+    background-color: #1e1721;
     grid-area: c1;
 }
 
 .c2 {
+    padding: 0.7vw;
+    border-radius: 0.75vw;
+    position: relative;
+    height: calc((100vh - 2.25vw)/2);
+    background-color: #6c9df9;
     grid-area: c2;
 }
 
 .c3 {
+    padding: 0.7vw;
+    border-radius: 0.75vw;
+    position: relative;
+    height: calc((100vh - 2.25vw)/2);
+    background-color: #e7e9ee;
     grid-area: c3;
 }
 
 .c4 {
+    padding: 0.7vw;
+    border-radius: 0.75vw;
+    position: relative;
+    height: calc((100vh - 2.25vw)/2);
+    background-color: #896a9a;
     grid-area: c4;
 }
