--- a/CodeWatch/frontend/style.css
+++ b/CodeWatch/frontend/style.css
@@ -1,96 +1,100 @@
 body {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 html {
-    height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
 
 main {
-    height: 100vh;
-    height: -webkit-fill-available;
-    max-height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .acbg {
-    background-color: #896a9a;
-    color: #e7e9ee;
+  background-color: #896a9a;
+  color: #e7e9ee;
 }
 
 .acbg:hover,
 .acbg:visited {
-    color: #e7e9ee;
+  color: #e7e9ee;
 }
 
 #sidenav {
-    position: fixed;
-    height: 100vh;
-    background-color: #1e1721;
+  position: fixed;
+  height: 100vh;
+  background-color: #1e1721;
 }
-.gscont{
-    position: absolute;
-    width: calc(100vw - 210px - 1.5vw);
-    height: calc(100vh - 1.5vw);
-    top: 0.75vw;
-    right: 0.75vw;
+.gscont {
+  position: absolute;
+  width: calc(100vw - 210px - 1.5vw);
+  height: calc(100vh - 1.5vw);
+  top: 0.75vw;
+  right: 0.75vw;
 }
 
 .gscontainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-auto-columns: 1fr;
-    gap: 0.75vw 0.75vw;
-    grid-auto-flow: row;
-    grid-template-areas:
-        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
-        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
-        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
-        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
-        "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
-        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
-        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
-        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
-        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
-        "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4";
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  gap: 0.75vw 0.75vw;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+    "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+    "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+    "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+    "c1 c1 c1 c1 c1 c1 c1 c2 c2 c2"
+    "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+    "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+    "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+    "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4"
+    "c3 c3 c3 c3 c3 c4 c4 c4 c4 c4";
 }
 
 .c1 {
-    padding: 0.7vw;
-    border-radius: 0.75vw;
-    position: relative;
-    color:#e7e9ee;
-    height: calc((100vh - 2.25vw)/2);
-    background-color: #1e1721;
-    grid-area: c1;
+  padding: 0.7vw;
+  border-radius: 0.75vw;
+  position: relative;
+  color: #e7e9ee;
+  height: calc((100vh - 2.25vw) / 2);
+  background-color: #1e1721;
+  grid-area: c1;
+  font-size: 1.5vw;
 }
 
 .c2 {
-    padding: 0.7vw;
-    border-radius: 0.75vw;
-    position: relative;
-    height: calc((100vh - 2.25vw)/2);
-    background-color: #6c9df9;
-    grid-area: c2;
+  padding: 0.7vw;
+  border-radius: 0.75vw;
+  position: relative;
+  height: calc((100vh - 2.25vw) / 2);
+  background-color: #6c9df9;
+  font-size: 1.5vw;
+  grid-area: c2;
 }
 
 .c3 {
-    padding: 0.7vw;
-    border-radius: 0.75vw;
-    position: relative;
-    height: calc((100vh - 2.25vw)/2);
-    background-color: #e7e9ee;
-    grid-area: c3;
+  padding: 0.7vw;
+  border-radius: 0.75vw;
+  position: relative;
+  height: calc((100vh - 2.25vw) / 2);
+  background-color: #e7e9ee;
+  grid-area: c3;
+  font-size: 1.35vw;
 }
 
 .c4 {
-    padding: 0.7vw;
-    border-radius: 0.75vw;
-    position: relative;
-    height: calc((100vh - 2.25vw)/2);
-    background-color: #896a9a;
-    grid-area: c4;
+  padding: 0.7vw;
+  border-radius: 0.75vw;
+  position: relative;
+  height: calc((100vh - 2.25vw) / 2);
+  background-color: #896a9a;
+  grid-area: c4;
+  font-size: 1.3vw;
 }
